--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import "reset.css";
+@import "status-bar.css";
+
 body{
     font-family: 'Open Sans', sans-serif;
 }
 
-.status-bar{
-    display:flex;
-    justify-content: center;
-}
-.status-bar__column{
-    width: 33%;
-}
-.status-bar__column:first-child span{
-    margin-right: 5px;
-}
-.status-bar__column:nth-child(2){
+.welcome-header{
+    margin:95px 0px;
+    text-align: center;
     display: flex;
-    justify-content: center;
-}
-.status-bar__column:last-child{
-    display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
     align-items: center;
 }
-.status-bar__column .fa-battery-full{
-    margin: 0px 5px;
+
+.welcome-header__title{
+    margin-bottom: 35px;
+    font-size: 25px;
+}
+
+.welcome-header__text{
+    width: 50%;
+    opacity: 0.5;
+    font-size: 14px;
 }
