--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 @import "reset.css";
-@import "status-bar.css";
 @import "variables.css";
+
+/* Component */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screen/login.css";
 
 body{
     font-family: 'Open Sans', sans-serif;
-}
-
-.welcome-header{
-    margin:95px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.welcome-header__title{
-    margin-bottom: 35px;
-    font-size: 25px;
-}
-
-.welcome-header__text{
-    width: 50%;
-    opacity: 0.5;
-    font-size: 14px;
-}
-
-#login-form{
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px;
-}
-
-#login-form input{
-    border: none;
-    padding: 15px 0px;
-    font-size: 18px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 25px;
-    transition: border-color 0.3s ease-in-out;
-}
-
-#login-form input::placeholder{
-    color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus{
-    border-color: var(--yellow);
 }
