--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,8 +1,9 @@
-
 .status-bar{
     display:flex;
     justify-content: center;
     padding: 5px 3px;
+    width: 100%;
+    box-sizing: border-box;
 }
 .status-bar__column{
     width: 33%;
