--- a/css/screen/login.css
+++ b/css/screen/login.css
@@ -17,40 +17,41 @@
     font-size: 14px;
 }
 
-#login-form{
+.login-form{
     display: flex;
     flex-direction: column;
     margin: 0px 30px;
 }
 
-#login-form input{
+.login-form__input{
     border: none;
     padding: 15px 0px;
     font-size: 18px;
     margin-bottom: 25px;
-}
-
-#login-form input:not([type="submit"]){
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     transition: border-color 0.3s ease-in-out;
 }
 
-#login-form input::placeholder{
+.login-form__input::placeholder{
     color: rgba(0, 0, 0, 0.4);
 }
 
-#login-form input:focus{
+.login-form__input:focus{
     border-color: var(--yellow);
 }
 
-#login-form input[type="submit"]{
+.login-form__btn{
+    border: none;
+    padding: 15px 0px;
+    font-size: 18px;
+    margin-bottom: 25px;
     background-color: var(--yellow);
     cursor: pointer;
     padding: 20px 0px;
     border-radius: 5px;
 }
 
-#login-form a{
+.login-form__a{
     text-align: center;
     text-decoration: none;
     color: inherit;
