--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,15 @@
 
 /* Component */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-components.css";
 
 /* Screens */
 @import "screen/login.css";
+@import "screen/friends.css";
 
 body{
+    color: #2e363e;
     font-family: 'Open Sans', sans-serif;
 }
