--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-components.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screen/login.css";
@@ -15,4 +16,8 @@
 body{
     color: #2e363e;
     font-family: 'Open Sans', sans-serif;
+}
+
+.main-screen{
+    padding: 0px var(--horizontal-space);
 }
