--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: var(--horizontal-space);
+    margin-bottom: 15px;
 }
 .screen-header__title{
     font-size: 32px;
