--- a/css/components/user-components.css
+++ b/css/components/user-components.css
@@ -17,12 +17,13 @@
 
 .user-component__title{
     font-weight: 600;
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .user-component__subtitle{
     margin-top: 5px;
     color: rgba(0,0,0,0.5);
+    font-size: 15px;
 }
 .user-component__avatar--xl{
     width: 80px;
@@ -37,5 +38,12 @@
     font-weight: 400;
 }
 .user-component__column:last-child{
-    color: rgba(0,0,0,0.5);
+    color: rgba(0,0,0,0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.user-component-time{
+    margin-bottom: 5px;
+    display: block;;
 }
