--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 /* Screens */
 @import "screen/login.css";
 @import "screen/friends.css";
+@import "screen/find.css";
 
 body{
     color: #2e363e;
