--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,19 @@
 @import "components/screen-header.css";
 @import "components/user-components.css";
 @import "components/badge.css";
+@import "components/point.css";
+@import "components/icon-row.css";
 
 /* Screens */
 @import "screen/login.css";
 @import "screen/friends.css";
 @import "screen/find.css";
+@import "screen/more.css";
 
 body{
     color: #2e363e;
     font-family: 'Open Sans', sans-serif;
+    height: 300vh;
 }
 
 .main-screen{
