--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -4,6 +4,7 @@
     padding: 5px 3px;
     width: 100%;
     box-sizing: border-box;
+    position: fixed;
 }
 .status-bar__column{
     width: 33%;
