--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/alt-screen-header.css";
 @import "components/user-components.css";
 @import "components/badge.css";
 @import "components/point.css";
@@ -16,6 +17,8 @@
 @import "screen/friends.css";
 @import "screen/find.css";
 @import "screen/more.css";
+@import "screen/settings.css";
+@import "screen/chat.css";
 
 body{
     color: #2e363e;
