--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -5,7 +5,7 @@
     background-color: #f9f9fa;
     padding: 20px 50px;
     box-sizing: border-box;
-    border-top:1px solid rgba(165, 53, 53, 0.3);
+    border-top: var(--main-border)
 }
 .nav__list{
     display: flex;
@@ -15,8 +15,48 @@
     color: #2e363e;
     position: relative;
 }
+
+@keyframes notificationAnimation {
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(-5px) rotateY(180deg);
+    }
+    100%{
+        transform: none;
+    }
+    
+}
 .nav__notification{
     position:absolute;
     top: -25px;
     left:15px;
+    animation:notificationAnimation 1.3s linear infinite;
+}
+
+@keyframes appearBtnAnimation {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+    
+}
+.nav__btn{
+    transform: translateY(50px);
+    opacity: 0;
+    animation:appearBtnAnimation 0.5s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2){
+    animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3){
+    animation-delay: 0.5s;
+}
+.nav__btn:last-child{
+    animation-delay: 0.8s;
 }
