--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -19,3 +19,14 @@
     top: -6px;
     left:17px;
 }
+@keyframes rotateCog{
+    from{
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+.screen-header__icons .fa-cog:hover{
+    animation: rotateCog 2s linear infinite;
+}
