--- a/css/screen/chat.css
+++ b/css/screen/chat.css
@@ -19,12 +19,22 @@
     top: 10px;
     z-index: 1;
 }
+@keyframes fadeIn {
+    from{
+        transform:translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform:none;
+        opacity: 1;
+    }
+}
 .main-chat{
     margin-top: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    animation: fadeIn 0.3s linear;
 }
 
 .chat__timestamp{
@@ -90,6 +100,7 @@
     padding: 5px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: all 0.3s ease-in-out;
 }
 .reply .reply__column:first-child{
     width:10%;
@@ -97,25 +108,28 @@
 .reply .reply__column:last-child{
     width: 90%;
     position: relative;
+    
 }
 .reply i{
     opacity: 0.5;
 }
 .reply input {
-    padding : 15px;
+    padding : 14px;
     width: 100%;
     border: var(--main-border);
-    border-radius: 20px;
+    border-radius: 25px;
+    box-sizing:border-box;
+    transition: all 0.3s ease-in-out;
 }
 .reply__column:last-child > i,
 .reply__column:last-child button{
     position:absolute;
-    right:-3px;
-    top:2px;
+    right:3px;
+    top:3px;
 }
 .reply__column:last-child > i {
-    right:40px;
-    top:10px;
+    right:50px;
+    top:16px;
 }
 .reply__column button i{
     opacity: 1;
@@ -123,11 +137,28 @@
 .reply__column button{
     background-color: var(--yellow);
     border:none;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
 .reply__column button:focus,
 .reply__column button:active{
     outline: none;
+}
+.reply .reply__column:first-child,
+.reply .fa-smile-wink,
+.reply button{
+    transition: opacity 0.3s ease-in-out;
+}
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button{
+    opacity: 0;
+}
+.reply input:focus{
+    width:95vw;
+    transform: translateX(-13%) translateY(-80px);
+}
+.reply:focus-within{
+    transform: translateY(80px);
 }
