--- a/css/screen/friends.css
+++ b/css/screen/friends.css
@@ -26,3 +26,30 @@
     justify-content:space-between;
     color: rgba(0, 0, 0, 0.5);
 }
+
+#splash-screen{
+    top: 0;
+    position: absolute;
+    background-color: var(--yellow);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 52px;
+    animation: hideSplashScreen 0.3s ease-in-out forwards;
+    animation-delay: 0.4s;
+}
+
+@keyframes hideSplashScreen {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+
+    
