--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-sizing: border-box;
 }
 .alt-header__column{
     width:33%;
@@ -19,7 +20,6 @@
     text-align: center;
 }
 .alt-header__column:last-child{
-    margin-left:auto;
     display: flex;
     justify-content: end;
 }
